@@ -20,6 +20,8 @@
 
 ========================
 
+02/09
+	* Spider web can again be recasted on target. [Skotlex]
 02/08
 	* Fixed a skill_db.txt typo for AS_ENCHANTPOISON introduced in r9794 [ultramage]
 02/07
